plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '4.0.5'
}

group = 'dev.spiffocode'
version = '0.0.1-SNAPSHOT'
description = 'siges-api'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    google()
    maven { url 'https://projectlombok.org/edge-releases' }
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1'
    implementation 'com.auth0:java-jwt:4.5.0'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.springframework.data:spring-data-envers'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    implementation 'com.googlecode.libphonenumber:libphonenumber:9.0.25'
    implementation 'org.apache.commons:commons-text:1.15.0'
    implementation 'org.apache.commons:commons-text:1.15.0'
    implementation("org.apache.commons:commons-rng-simple:1.6")
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'com.resend:resend-java:+'
    implementation platform('software.amazon.awssdk:bom:2.25.10')
    implementation 'software.amazon.awssdk:s3'
    implementation("org.apache.tika:tika-core:3.2.3")
    compileOnly 'org.projectlombok:lombok:edge-SNAPSHOT'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor("org.projectlombok:lombok-mapstruct-binding:0.2.0")
    annotationProcessor 'io.github.anweber:mapstruct-springlazy:1.0.0'
    testImplementation platform('org.testcontainers:testcontainers-bom:1.20.4')
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-jdbc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    implementation "com.google.firebase:firebase-admin:9.8.0"
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'com.redis:testcontainers-redis'
    testImplementation 'org.testcontainers:testcontainers-localstack:2.0.1'
    implementation 'org.postgresql:postgresql'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


test {
    jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}", '-Xshare:off'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-parameters']
}


tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
}
